# matematic

./: .gitignore  README.md
dinamic/matic/: Test.cpp  Test.h  matic.sln  matic.vcxproj
dinamic/matic/matic/x64/Debug/: matic.dll.recipe  matic.ilk  vc143.idb
dinamic/matic/matic/x64/Debug/matic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  matic.lastbuildstate
dinamic/matic/matic/x64/Release/: matic.dll.recipe  matic.iobj  matic.ipdb
dinamic/matic/matic/x64/Release/matic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  matic.lastbuildstate
dinamic/matic/x64/Release/: matic.exp  matic.lib
lab1/: CMakeLists.txt  main.cpp
lab1/Matic/: CMakeLists.txt  ad-spline.h  const.h  graphics.cpp  matic.cpp  matrix.h  methods.h  spline.h  vector.h
test/lab1/: CMakeLists.txt  main.cpp
test/lab1/Matic/: CMakeLists.txt  array.h  const.cpp  const.h  example.h  funct.h  graphics.cpp  graphics.h  integration.h  lambda.h  matic.h  matrix.h  mymath.cpp  polynom.h  spline.h  time.h  vector.h
test/lab1/mymath/: CMakeLists.txt  example.h  funct.h  matrix.h  mymath.cpp  mymath.h  spline.h  vector.cpp  vector.h
